Fix image and javascript URLs

--- a/theme/stylesheets/agency.css
+++ b/theme/stylesheets/agency.css
@@ -265,7 +265,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(../images/header-bg.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -653,7 +653,7 @@ aside.clients img {
 
 section#contact {
     background-color: #222;
-    background-image: url(../img/map-image.png);
+    background-image: url(../images/map-image.png);
     background-position: center;
     background-repeat: no-repeat;
 }
