Moved out of index page sections about, clients, contacts, footer, header, navigation, portfolio, services, team  into includes.

--- a/theme/layouts/default.html
+++ b/theme/layouts/default.html
@@ -3,6 +3,15 @@
     ${include "head.html"}
     <body id="page-top" class="index">
         ${content}
+        ${include "navigation.html"}
+        ${include "header.html"}
+        ${include "services.html"}
+        ${include "portfolio.html"}
+        ${include "about.html"}
+        ${include "team.html"}
+        ${include "clients.html"}
+        ${include "contacts.html"}
+        ${include "footer.html"}
         ${include "javascripts.html"}
     </body>
 </html>
