--- a/theme/includes/header.html
+++ b/theme/includes/header.html
@@ -2,9 +2,9 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">Welcome To Our Studio!</div>
-            <div class="intro-heading">It's Nice To Meet You</div>
-            <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+            <div class="intro-lead-in">${page.header.welcome}</div>
+            <div class="intro-heading">${page.header.nice}</div>
+            <a href="#services" class="page-scroll btn btn-xl">${page.header.button}</a>
         </div>
     </div>
 </header>
