--- a/theme/includes/navigation.html
+++ b/theme/includes/navigation.html
@@ -9,30 +9,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">${page.navigation.brand}</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                <%
+                page.sections.each { Map section ->
+                def id = "#" + section.name.replace(" ", "-").toLowerCase()
+                %>
+                <li class="page-scroll">
+                    <a href="${id}">${section.name}</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#team">Team</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
+                <% } %>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
