--- a/theme/includes/portfolio.html
+++ b/theme/includes/portfolio.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
-                        <h2>Project Name</h2>
+                        <h2>${modal.title}</h2>
                         <p class="item-intro text-muted">${modal.text}</p>
                         <img class="img-responsive img-centered" src="images/portfolio/${modal.image}" alt="">
                         <p><a href="${modal.link}">${modal.title}</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
