Put unused .php and .less files to the misc directory. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/theme/includes/head.html
+++ b/theme/includes/head.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>${page.navigation.brand}</title>
+    <title>${page.title}</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
