Put all text from the team, clients and footer includes to the index.html file. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/theme/includes/about.html
+++ b/theme/includes/about.html
@@ -28,9 +28,7 @@
                     <% } %>
                     <li class="timeline-inverted">
                         <div class="timeline-image">
-                            <h4>Be Part
-                                <br>Of Our
-                                <br>Story!</h4>
+                            <h4>${page.about.lastevent}</h4>
                         </div>
                     </li>
                 </ul>
