--- a/theme/includes/clients.html
+++ b/theme/includes/clients.html
@@ -3,23 +3,23 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="images/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                <a href="${page.clients.link1}">
+                    <img src="images/logos/${page.clients.image1}" class="img-responsive img-centered" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="images/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                <a href="${page.clients.link2}">
+                    <img src="images/logos/${page.clients.image2}" class="img-responsive img-centered" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="images/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                <a href="${page.clients.link3}">
+                    <img src="images/logos/${page.clients.image3}" class="img-responsive img-centered" alt="">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
-                <a href="#">
-                    <img src="images/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                <a href="${page.clients.link4}">
+                    <img src="images/logos/${page.clients.image4}" class="img-responsive img-centered" alt="">
                 </a>
             </div>
         </div>
