--- a/theme/includes/portfolio.html
+++ b/theme/includes/portfolio.html
@@ -40,10 +40,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <h2>${modal.title}</h2>
-                        <p class="item-intro text-muted">${modal.text}</p>
+                        <p class="item-intro text-muted">${modal.subtitle}</p>
                         <img class="img-responsive img-centered" src="images/portfolio/${modal.image}" alt="">
-                        <p><a href="${modal.link}">${modal.title}</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily be integrated into almost any design. All of these components are made in the same style, and can easily be integrated into projects, allowing you to create hundreds of solutions for your future projects.</p>
-                        <p>You can preview ${modal.title} <a href="${modal.link}">here</a>.</p>
+                        <p>${modal.description}</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                     </div>
                 </div>
