--- a/theme/includes/footer.html
+++ b/theme/includes/footer.html
@@ -2,23 +2,23 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Your Website 2014</span>
+                <span class="copyright">${page.footer.copyrightnotice}</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                    <li><a href="${page.footer.twitter}"><i class="fa fa-twitter"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
+                    <li><a href="${page.footer.facebook}"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                    <li><a href="${page.footer.linkedin}"><i class="fa fa-linkedin"></i></a>
                     </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
+                    <li><a href="${page.footer.policylink}">Privacy Policy</a>
                     </li>
-                    <li><a href="#">Terms of Use</a>
+                    <li><a href="${page.footer.termslink}">Terms of Use</a>
                     </li>
                 </ul>
             </div>
