Set the theme title to Agency Theme. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/theme/includes/header.html
+++ b/theme/includes/header.html
@@ -2,8 +2,8 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">${page.header.welcome}</div>
-            <div class="intro-heading">${page.header.nice}</div>
+            <div class="intro-lead-in">${page.header.line1}</div>
+            <div class="intro-heading">${page.header.line2}</div>
             <a href="#services" class="page-scroll btn btn-xl">${page.header.button}</a>
         </div>
     </div>
